[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nessus-export"
version = "0.1.0"
description = "Export Nessus scan results via the API, with a reconstruction fallback for trial-mode servers."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "setuidloot", email = "michael@mccord.ai" }]
keywords = ["nessus", "tenable", "security", "vulnerability", "export", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []  # standard library only

[project.urls]
Homepage = "https://github.com/setuidloot/nessus-export"
Issues = "https://github.com/setuidloot/nessus-export/issues"

[project.scripts]
nessus-export = "nessus_export.cli:main"

[tool.setuptools]
packages = ["nessus_export"]
